// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons components Renders Plus and minus button properly 1`] = `
<button
  class="sc-gsDKAQ dlHsdh"
>
  +
</button>
`;

exports[`Buttons components Renders PlusAndMinusButton properly 1`] = `
<button
  class="sc-gsDKAQ dlHsdh"
>
  Test
</button>
`;

exports[`Buttons components Renders Submit button properly 1`] = `
<button
  class="sc-bdvvtL kDPKLz"
>
  Enviar
</button>
`;

exports[`Buttons components Renders SubmitButton properly 1`] = `
<button
  class="sc-bdvvtL kDPKLz"
>
  Test
</button>
`;
